--- a/incs870_team4.ipynb
+++ b/incs870_team4.ipynb
@@ -38,25 +38,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kAonk6lUz5UI",
-        "outputId": "5b9877d1-b604-49e2-df69-f6b3cc7cbdd5"
+        "outputId": "66f1dacd-0b36-42c4-dedc-fec806e55c4d"
       },
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting imbalanced-learn\n",
-            "  Downloading imbalanced_learn-0.12.3-py3-none-any.whl.metadata (8.3 kB)\n",
+            "Requirement already satisfied: imbalanced-learn in /usr/local/lib/python3.10/dist-packages (0.12.3)\n",
             "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.26.4)\n",
             "Requirement already satisfied: scipy>=1.5.0 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.13.1)\n",
             "Requirement already satisfied: scikit-learn>=1.0.2 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.5.2)\n",
             "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.4.2)\n",
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (3.5.0)\n",
-            "Downloading imbalanced_learn-0.12.3-py3-none-any.whl (258 kB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/258.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━\u001b[0m \u001b[32m174.1/258.3 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m258.3/258.3 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: imbalanced-learn\n",
-            "Successfully installed imbalanced-learn-0.12.3\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.5.2)\n",
             "Requirement already satisfied: numpy>=1.19.5 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.26.4)\n",
             "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.13.1)\n",
@@ -68,13 +63,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xJzGzg0FzrC0",
-        "outputId": "e2c70139-5de6-4c23-fc04-18ca2c7d59e9"
+        "outputId": "cda8c389-03e1-4808-e90a-7c9df3704d95"
       },
       "outputs": [
         {
@@ -114,7 +109,7 @@
       "metadata": {
         "id": "G2mRgdV89K2S"
       },
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -142,9 +137,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yQuMhkmd0NNe",
-        "outputId": "91b7e3da-3c7d-4be0-a506-a57b957d0117"
+        "outputId": "7534656c-8ed0-44c7-f15b-693c48b9a8d3"
       },
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,40 +147,40 @@
           "text": [
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1zOeCqtGZjAj_nSLe3W5MH5pDQM28bPde\n",
-            "From (redirected): https://drive.google.com/uc?id=1zOeCqtGZjAj_nSLe3W5MH5pDQM28bPde&confirm=t&uuid=66468420-d5fc-436c-9502-f8675803c72f\n",
+            "From (redirected): https://drive.google.com/uc?id=1zOeCqtGZjAj_nSLe3W5MH5pDQM28bPde&confirm=t&uuid=090bd13e-9f78-4870-903e-d7b195d2f496\n",
             "To: /content/dataset_1.csv\n",
-            "100%|██████████| 225M/225M [00:04<00:00, 50.8MB/s]\n",
+            "100%|██████████| 225M/225M [00:00<00:00, 304MB/s]\n",
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1fagr2rKW8EN-Psc5UlD9BFfa0rRRF6i3\n",
-            "From (redirected): https://drive.google.com/uc?id=1fagr2rKW8EN-Psc5UlD9BFfa0rRRF6i3&confirm=t&uuid=0c8f77aa-52f8-4c88-b454-8ea76a67e152\n",
+            "From (redirected): https://drive.google.com/uc?id=1fagr2rKW8EN-Psc5UlD9BFfa0rRRF6i3&confirm=t&uuid=a53de6cb-fc0d-4e65-8bc4-944d1771cc00\n",
             "To: /content/dataset_2.csv\n",
-            "100%|██████████| 135M/135M [00:02<00:00, 64.7MB/s]\n",
+            "100%|██████████| 135M/135M [00:01<00:00, 71.9MB/s]\n",
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1WL00LFkCA2ylV8_8c6jm52bnEhGLcKsq\n",
-            "From (redirected): https://drive.google.com/uc?id=1WL00LFkCA2ylV8_8c6jm52bnEhGLcKsq&confirm=t&uuid=f25b0f58-7aab-453a-932b-65adba76378b\n",
+            "From (redirected): https://drive.google.com/uc?id=1WL00LFkCA2ylV8_8c6jm52bnEhGLcKsq&confirm=t&uuid=8edd16e8-b603-415c-8e15-29d15b2bfa4c\n",
             "To: /content/dataset_3.csv\n",
-            "100%|██████████| 52.0M/52.0M [00:00<00:00, 56.9MB/s]\n",
+            "100%|██████████| 52.0M/52.0M [00:00<00:00, 203MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1xr_QBU3Ab42nW1ELl0NUydx4Rbx60TVR\n",
             "To: /content/dataset_4.csv\n",
-            "100%|██████████| 83.1M/83.1M [00:01<00:00, 59.4MB/s]\n",
+            "100%|██████████| 83.1M/83.1M [00:00<00:00, 202MB/s]\n",
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1MpqHsC5wQSu9CxlhJimz25EVcYubSMhu\n",
-            "From (redirected): https://drive.google.com/uc?id=1MpqHsC5wQSu9CxlhJimz25EVcYubSMhu&confirm=t&uuid=11d4d984-92ac-4c7d-82ab-92896e164025\n",
+            "From (redirected): https://drive.google.com/uc?id=1MpqHsC5wQSu9CxlhJimz25EVcYubSMhu&confirm=t&uuid=0989b3ce-da28-466a-be00-1ac978030d55\n",
             "To: /content/dataset_5.csv\n",
-            "100%|██████████| 177M/177M [00:02<00:00, 62.7MB/s]\n",
+            "100%|██████████| 177M/177M [00:00<00:00, 183MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=18mKfJHXinmfwPpaYNU2D6xHwq4dQuEuL\n",
             "To: /content/dataset_6.csv\n",
-            "100%|██████████| 58.3M/58.3M [00:00<00:00, 87.2MB/s]\n",
+            "100%|██████████| 58.3M/58.3M [00:00<00:00, 208MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1h1lMHytamf4Kc66NfAfMfBzDbmwM5Ub5\n",
             "To: /content/dataset_7.csv\n",
-            "100%|██████████| 76.9M/76.9M [00:00<00:00, 85.4MB/s]\n",
+            "100%|██████████| 76.9M/76.9M [00:00<00:00, 176MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=11__JhC64_D4ezxjF8d0dPNRDJF-TY6Pq\n",
             "To: /content/dataset_8.csv\n",
-            "100%|██████████| 77.1M/77.1M [00:01<00:00, 46.7MB/s]\n"
+            "100%|██████████| 77.1M/77.1M [00:00<00:00, 89.9MB/s]\n"
           ]
         }
       ]
@@ -207,7 +202,7 @@
       "metadata": {
         "id": "Z4B6Sgje9cA8"
       },
-      "execution_count": 5,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -217,13 +212,13 @@
       ],
       "metadata": {
         "id": "M4JSokVCATPY",
-        "outputId": "c9f96df5-9d61-4c8f-c491-884132e26ae1",
+        "outputId": "0eb327d0-7821-413a-cdec-a6b46530e137",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
         }
       },
-      "execution_count": 6,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +308,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7fecd3c7-422c-42fc-a928-8a35c198e44a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6b9d09ef-7494-48d5-8918-0caac2de736f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -555,7 +550,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7fecd3c7-422c-42fc-a928-8a35c198e44a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b9d09ef-7494-48d5-8918-0caac2de736f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -607,12 +602,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7fecd3c7-422c-42fc-a928-8a35c198e44a button.colab-df-convert');\n",
+              "        document.querySelector('#df-6b9d09ef-7494-48d5-8918-0caac2de736f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7fecd3c7-422c-42fc-a928-8a35c198e44a');\n",
+              "        const element = document.querySelector('#df-6b9d09ef-7494-48d5-8918-0caac2de736f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -632,8 +627,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-54e1d20d-f189-411b-b928-c44e5f0117e5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-54e1d20d-f189-411b-b928-c44e5f0117e5')\"\n",
+              "<div id=\"df-3e077c5c-7b6e-4350-a024-ae96876c906c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e077c5c-7b6e-4350-a024-ae96876c906c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -752,7 +747,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-54e1d20d-f189-411b-b928-c44e5f0117e5 button');\n",
+              "        document.querySelector('#df-3e077c5c-7b6e-4350-a024-ae96876c906c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -767,7 +762,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 20
         }
       ]
     },
@@ -778,12 +773,12 @@
       ],
       "metadata": {
         "id": "d3t3Uy7JAhj1",
-        "outputId": "5d445906-fbc7-4d20-feb0-b7fb19ec126b",
+        "outputId": "7e42da47-af5a-4623-aebe-2ddc5a7db72f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -793,7 +788,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 21
         }
       ]
     },
@@ -804,12 +799,12 @@
       ],
       "metadata": {
         "id": "ZIxOX8_R1Sin",
-        "outputId": "ceb8834a-151a-41ed-bec2-cff15ab0a0f1",
+        "outputId": "579e2969-24a1-48e9-ed4e-05af9184a926",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,12 +915,12 @@
       ],
       "metadata": {
         "id": "y7Zvt-PyBKnz",
-        "outputId": "12c35a1d-47ef-4eb8-b7ec-4b40615034a0",
+        "outputId": "a7ebfa16-e480-465c-c3a0-09126aa4c6cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,12 +956,12 @@
       ],
       "metadata": {
         "id": "uDzdKjeo5uz3",
-        "outputId": "b44fba32-c3e4-43eb-9714-910e57eb45ae",
+        "outputId": "0d3e94b1-ebe3-4077-e0eb-32bed96aeb5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,12 +995,12 @@
       ],
       "metadata": {
         "id": "9FlSWH438FNz",
-        "outputId": "64051723-6c12-4d34-b99f-2eeeb60ec4ad",
+        "outputId": "265d28bb-eaea-4d16-80b2-77d1af3b80f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1028,12 +1023,12 @@
       ],
       "metadata": {
         "id": "7FwXtng89-qo",
-        "outputId": "69aa73d2-6f14-4bed-fef9-9cac69467505",
+        "outputId": "4816f74e-5867-4d8b-97f4-1383f2d6853e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,12 +1052,12 @@
       ],
       "metadata": {
         "id": "K1BpInec-TT8",
-        "outputId": "f332fc00-30d7-4cab-8534-61787a32ea49",
+        "outputId": "76d1e8ac-4205-4d10-bd1a-cecf5f4d7194",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,6 +1072,8 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "\n",
         "#check for infinity values\n",
         "infVal=X.isin([np.inf, -np.inf]).sum()\n",
         "print(\"Infinity values in each column:\\n\", infVal[infVal>0])\n",
@@ -1087,12 +1084,12 @@
       ],
       "metadata": {
         "id": "em8IR97pYomg",
-        "outputId": "5a51f5cf-4a03-4f0a-f6d8-1e9038545e41",
+        "outputId": "05dc58c9-321e-4ba2-d433-a727906d254f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1161,12 +1158,12 @@
       ],
       "metadata": {
         "id": "UPC0uyvzbUmQ",
-        "outputId": "59651c24-15bb-4ebc-d5d8-165dee61cdc2",
+        "outputId": "f96c0247-470f-4996-b0d4-c6734efc6f1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,7 +1204,7 @@
       "metadata": {
         "id": "MNLkofDccgZF"
       },
-      "execution_count": 22,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1235,13 +1232,13 @@
       ],
       "metadata": {
         "id": "EKeMOBwwiCVs",
-        "outputId": "5625528f-5911-483f-c508-7d19000ee6de",
+        "outputId": "86a9f78b-c017-4b67-c077-e38a16812e53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 928
         }
       },
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1289,12 +1286,12 @@
       ],
       "metadata": {
         "id": "t4z5mPXDtNyM",
-        "outputId": "9f6996bf-89b9-4c6e-f082-9a7f2b142aab",
+        "outputId": "0d085652-affc-41c9-904a-34b8723db668",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,12 +1324,12 @@
       ],
       "metadata": {
         "id": "XQs-d1Zhukbz",
-        "outputId": "740c921e-f6e8-4c3d-fe9a-3359cd85026e",
+        "outputId": "30910756-e669-4f40-8f3d-95ffbf9a3d17",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1399,12 +1396,12 @@
       ],
       "metadata": {
         "id": "3X4CXNgZ0OII",
-        "outputId": "0ebae205-0aa7-46b1-b081-20248649d45b",
+        "outputId": "52c1f39f-d996-47d5-fd50-af8eadaaa179",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1458,7 +1455,7 @@
       ],
       "metadata": {
         "id": "AB5RqUEJ1bSk",
-        "outputId": "2e2db714-a389-4092-ff1c-edb8b2cdc3a5",
+        "outputId": "dfa2b869-23f5-4417-c88e-cec32af5bc67",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1480,13 +1477,37 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection impo"
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "#Use features from selected_features_df dataframe and y_encode\n",
+        "x_train,x_test,y_train,y_test=train_test_split(selected_features_df,y_encode,test_size=0.2,random_state=42,stratify=y_encode)\n",
+        "\n",
+        "#check the shapes of the resulting datsets\n",
+        "print(\"Traning features set shape:\",x_train.shape)\n",
+        "print(\"Test features set shape:\",x_test.shape)\n",
+        "print(\"Traning Lable set shape:\",y_train.shape)\n",
+        "print(\"Test Lable set shape:\",y_test.shape)"
       ],
       "metadata": {
-        "id": "gkKo5E945x3N"
+        "id": "gkKo5E945x3N",
+        "outputId": "6fbda2b9-8a11-4d33-d77f-1d5fbbf93dfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Traning features set shape: (2264594, 21)\n",
+            "Test features set shape: (566149, 21)\n",
+            "Traning Lable set shape: (2264594,)\n",
+            "Test Lable set shape: (566149,)\n"
+          ]
+        }
+      ]
     }
   ]
 }
